apps/dependencies/dynamodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dynamodb
  labels:
    app: dynamodb
spec:
  serviceName: "dynamodb"
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local
        ports:
        - containerPort: 8000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
spec:
  selector:
    app: dynamodb
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
